# OmniAvatar

./: .gitignore  COMFYUI_INSTALLATION_GUIDE.md  MANIFEST.in  PACKAGE_ISSUE_ANALYSIS.md  PYPI_SETUP.md  README.md  pyproject.toml  setup_comfyui.py
OmniAvatar/: __init__.py
OmniAvatar/models/: model_manager.py  wan_video_dit.py
comfyui_nodes/: README.md  __init__.py  error_handling.py  inference_pipeline.py  omniavatarInference.py  omniavatarconfig.py  requirements.txt  tensor_utils.py
comfyui_nodes/installer/: __init__.py  comfyui_integrator.py  dependency_manager.py  main_installer.py  model_downloader.py  system_validator.py
scripts/: build_and_upload.py  inference.py  install_dev.py
